--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <title>Leon-Arno</title>
   </head>
@@ -38,11 +38,6 @@
     </header>
 
     <main>
-      <section class="box">
-        <div class="side-banner">Hello</div>
-        <div class="middle">Middle</div>
-        <div class="side-banner">Hello</div>
-      </section>
       <section class="hero-section">
         <div class="hero-text float-left">
           <h1>Welcome to Leon-Arno. The Studio that makes stuff happen.</h1>
