--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="hero-img">
           <img
-            src="img/hero-img.svg"
+            src="hero-img.svg"
             alt="Image of a woman and social media icons."
             width="400px"
           />
