--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
       <nav>
         <ul class="navbar-items">
           <li class="navbar-item">
-            <a class="navbar-link" href="/">Leon-Arno</a>
+            <a class="navbar-link" href="index.html">Leon-Arno</a>
           </li>
           <li class="navbar-item">
-            <a class="navbar-link" href="/about-us.html">About Us</a>
+            <a class="navbar-link" href="about-us.html">About Us</a>
           </li>
           <li class="navbar-item">
-            <a class="navbar-link" href="/contact.html">Contact</a>
+            <a class="navbar-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </nav>
